...
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/spinner"
    tools:ignore="UnusedAttribute"/>

  <android.support.design.widget.BottomNavigationView
    android:id="@+id/core_navigation"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/res_green"
    app:elevation="0dp"
    app:itemBackground="@color/res_green"
    app:itemHorizontalTranslationEnabled="false"
...
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_7"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
...
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>


          <TextView
            android:id="@+id/textview_day_1"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
...
