<resources>
  <string name="app_name">Volition</string>
  <string name="title_home">Home</string>
  <string name="core_navigation_treatmentPlan">Treatment Plan</string>
  <string name="core_navigation_profile">Profile</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="create_profile_name">Enter Name</string>
  <string name="core_navigation_home">Home</string>
  <string name="core_navigation_activity">Activity</string>
  <string name="core_navigation_plan">Plan</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="drawer_menu_edit_profile">Edit Profile</string>
  <string name="drawer_menu_edit_treatment_plan">Edit Treatment Plan</string>
  <string name="drawer_menu_view_classification">View Classification</string>
  <string name="drawer_menu_retake_questionnaire">Retake Questionnaire</string>
  <string name="drawer_menu_clinical_overview">View Clinical Overview</string>
  <string name="button_yes">Yes</string>
  <string name="button_no">No</string>
  <string name="create_profile_date_of_birth">Enter Date of Birth</string>
  <string-array name="create_profile_gender_array">
    <item>Select Gender</item>
    <item>Female</item>
    <item>Male</item>
    <item>Other</item>
  </string-array>
  <string name="create_profile_back_out_title">Leaving Profile Creation</string>
  <string name="create_profile_back_out_content">Are you sure that you\'d like to cancel your profile creation? You will have to resubmit your user information.</string>
  <string name="create_profile_are_you">Are you:</string>
  <string name="create_profile_client">Person in Recovery/Seeking Recovery</string>
  <string name="create_profile_support">Family or Support Person</string>
  <string name="create_profile_drugs">Drug of Choice:</string>
  <string name="create_profile_heroin">Heroin</string>
  <string name="create_profile_other_opiates">Other Opiates and Synthetics</string>
  <string name="create_profile_alcohol">Alcohol</string>
  <string name="create_profile_cocaine">Cocaine/Crack</string>
  <string name="create_profile_marijuana">Marijuana</string>
  <string name="create_profile_meth">Methamphetamine</string>
  <string name="create_profile_ben">Benzodiazepines</string>
  <string name="create_profile_other_tranquil">Other Non-Benzodiazepine Tranquilizers</string>
  <string name="create_profile_sedatives">Barbiturates, Sedatives, or Hypnotics</string>
  <string name="create_profile_inhalants">Inhalants</string>
  <string name="create_profile_other">Other</string>
  <string name="create_profile_if_other">Please enter name of other drug here.</string>
  <string name="create_profile_substance_use">Substance Use Disorder:</string>
  <string-array name="create_profile_use_type_array">
    <item>Select Type</item>
    <item>Opioid Use Disorder</item>
    <item>Alcohol Use Disorder</item>
  </string-array>
  <string name="create_profile_clean_date">Enter Date of Last Use/Clean Date</string>
  <string name="create_profile_record_answers">Record Answers</string>
  <string name="display_profile_entered">Profile Information</string>
  <string name="display_profile_name_colon">Name:</string>
  <string name="display_profile_example_name">Replace with name entered</string>
  <string name="display_profile_dob_colon">Date of Birth:</string>
  <string name="display_profile_example_dob">Replace with date of birth</string>
  <string name="display_profile_gender_colon">Gender:</string>
  <string name="display_profile_example_gender">Replace with gender selected</string>
  <string name="display_profile_person_colon">I am a: </string>
  <string name="display_profile_example_person">Replace with the option selected</string>
  <string name="display_profile_example_drug">Replace with the drug selected</string>
  <string name="display_profile_example_type">Replace with the type selected</string>
  <string name="display_profile_last_use_colon">Date of Last Use/Clean Date:</string>
  <string name="display_profile_example_date">Replace with the date entered</string>
  <string name="display_profile_continue">Continue</string>
  <string name="profile_update_profile">Update Profile</string>
  <string name="home_welcome">Welcome Back</string>
  <string name="home_clean">Days Clean:</string>
  <string name="title_activity_medication_choice">MedicationChoice</string>
  <string name="title_activity_medication_dosage">MedicationDose</string>
  <string name="report_use_question">Have you used since your last check-in?</string>
  <string name="questionnaire_question_1"> Do you often take larger amounts of opioids or
take opioids over a longer period of time than
intended?</string>
  <string name="questionnaire_question_2"> Do you often have a persistent desire or
unsuccessful efforts to cut down or control
opioid use?</string>
  <string name="questionnaire_question_3"> Do you spend a great deal of time in activities
necessary to obtain opioids, use opioids, or
recover from their effects?</string>
  <string name="questionnaire_question_4"> Do you experience cravings or a strong desire to
use opioids</string>
  <string name="questionnaire_question_5"> Does recurrent opioid use result in failing to
fulfill major role obligations at work, school or
home?</string>
  <string name="questionnaire_question_6"> Do you continue to use opioids despite having
persistent or recurrent social or interpersonal
problems that are caused or exacerbated by the
effects of opioids?</string>
  <string name="questionnaire_question_7"> Do you reduce or give up important social,
occupational or recreational activities because
of opioid use?</string>
  <string name="questionnaire_question_8"> Do you often use opioids in situations in which it
is physically hazardous?</string>
  <string name="questionnaire_question_9"> Do you continue to use opioids despite having a
persistent or recurrent physical or psychological
problem that has been caused or exacerbated
by opioids?</string>
  <string name="questionnaire_question_10"> Do you have a tolerance to opioids defined as a
need for increased amounts of opioids to
achieve intoxication or desired effect or a
diminished effect with continued use of the
same amount of opioid?</string>
  <string name="questionnaire_question_11"> Do you experience withdrawal from opioids or need to take opioids to relieve or avoid withdrawal symptoms? \n
Withdrawal defined as three or more of the following symptoms develop within minutes to several days following last use: Dysphoic mood. \n
•Nausea or vomiting \n •Muscle aches. \n •Lacrimation or rhinorrhea. \n •Pupillary dilation, piloerection, or swearing. \n •Diarrhea. \n •Yawning. \n •Fever. \n •Insomnia.</string>
  <string name="severity_total"> Total Score: </string>
  <string name="severity_specifier"> Specifier: </string>
  <string name="severity_current"> Current Severity: </string>
  <string name="severity_username"> Username: </string>
  <string name="severity_mild_symptoms"> Presence of 2–3 symptoms </string>
  <string name="severity_mild"> Mild</string>
  <string name="severity_moderate_symptoms"> Presence of 4–5 symptoms.</string>
  <string name="severity_moderate">Moderate</string>
  <string name="severity_severe_symptoms">Presence of 6 or more symptoms.</string>
  <string name="severity_severe">Severe</string>
  <string name="severity_plan"> View Medication Details </string>
  <string name="medication_choice_buprenorphine_button"> Buprenorphine</string>
  <string name="medication_choice_abstain_button"> Abstain</string>
  <string name="medication_choice_question"> Would you like to take Buprenorphine or abstain?</string>
  <string name="activity_tea_button"> TEA</string>
  <string name="activity_lesson_button"> Lesson</string>
  <string name="activity_journal_button"> Journal</string>
  <string name="activity_edu_button"> Edu.</string>
  <string name="activity_daily_wellness_button"> Daily Wellness</string>
  <string name="activity_clean_tracker_button"> Clean Tracker</string>
  <string name="activity_title_activity_screen"> Activities</string>
  <string name="res_logo_background"> Logo</string>
  <string name="activity_tea_completed">teaCompleted</string>
  <string name="activity_lesson_completed">lessonCompleted</string>
  <string name="activity_tea_incomplete">teaIncomplete</string>
  <string name="activity_lesson_Incomplete">lessonIncomplete</string>
  <string name="activity_edu_completed">eduCompleted</string>
  <string name="activity_daily_wellness_completed">dailyWellnessCompleted</string>
  <string name="activity_journal_completed">journalCompleted</string>
  <string name="activity_clean_tracker_completed">cleanTrackerCompleted</string>
  <string name="activity_edu_incomplete">eduIncomplete</string>
  <string name="activity_daily_wellness_incomplete">dailyWellnessIncomplete</string>
  <string name="activity_journal_incomplete">journalIncomplete</string>
  <string name="activity_clean_tracker_incomplete">cleanTrackerIncomplete</string>
  <string name="classification_screen_title"> DSM-V Classification</string>
  <string name="classification_screen_level"> Current level of substance abuse: </string>
  <string name="classification_screen_button"> Retake classification</string>
  <string name="questionnaire_confirmation"> You are now being directed to the questionnaire. </string>
  <string name="take_questionnaire"> Take questionnaire</string>
  <string name="plan_previous_week">P</string>
  <string name="plan_next_week">N</string>
  <string name="activity_res_logo"> Logo</string>
  <string name="lesson_title"> Lesson Page</string>
  <string name="journal_title"> Journal Page</string>
  <string name="edu_title"> EDU Page</string>
  <string-array name="dosage_choice_title">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
  </string-array>
  <string name="dosage_choice_message"> You have chosen to take Buprenorphine. How many
  doses a day would you like to take?</string>
  <string name="dosage_choice_confirm"> Confirm</string>
  <string name="dosage_choice_res_logo"> Logo</string>
  <string name="add"> + </string>
  <string name="sub"> - </string>
  <string name="update"> update</string>
  <string name="counseling">Counseling</string>
  <string name="medManagement">Medication Management</string>
  <string name="cleanTimeTracking">Clean Time Tracking</string>
  <string name="supportMeeting">Support Meeting</string>
  <string name="outcomeMeasure">Outcome Measure</string>
  <string name="lessonPlanner">Lesson Planner</string>
  <string name="treatmentEffectivenessAssessment">Treatment Plan Effectiveness Assessment</string>
  <string name="readResponseJournal">Read and Response Journal</string>
  <string name="lifestyle"> Lifestyle</string>
  <string name="health">Health</string>
  <string name="community">Community</string>
  <string name="substance">Substance Use</string>
  <string name="tea_question_one"> How much better are you with drug and alcohol use?  Consider the frequency and amount of use, money spent on drugs, amount of drug cravings, time spent being “loaded”, being sick, in trouble and in other drug-use activities etc?</string>
  <string name="tea_question_two">Has your health improved?  In what way and how much?  Think about your physical and mental health.  Are you eating and sleeping properly, exercising, taking care of health problems, feeling better about yourself?</string>
  <string name="tea_question_three">How much better are you in taking care of personal responsibilities?  Think about your living conditions, family situations, employment, relationships:  Are you paying your bills?  Following through with your personal or professional commitments?</string>
  <string name="tea_question_four">Are you a better member of the community think about things like obeying laws and meeting your responsibilities to society.  Do your actions have a positive or negative impact on other people?</string>
  <string name="logo">This is the logo for Recovery Enhancement Solutions</string>
  <string name="remarks">Remarks</string>
  <string name="directions">Write down one or two changes most important to you or click submit. </string>
  <string name="submit">Submit</string>
  <string name="treatmentPlan_name">Recommended Treatment Plan</string>
  <string name="finish_button">Finish</string>
  <string name="daily_wellness_question">Considering your current condition, how would you rate your overall wellness right now?</string>
  <string name="daily_wellness_title">Report your Daily Wellness</string>
  <string name="daily_wellness_rating">Your Rating:</string>
  <string name="daily_wellness_submit_button">Submit Rating</string>
  <string name="daily_wellness_toast">Recorded your daily wellness! Thank you!</string>
  <string name="daily_wellness_activity_desc">Daily Wellness</string>
  <string name="daily_wellness_activity_note">Recorded a %d/10.</string>
  <string-array name="daily_wellness_result_strings">
    <item>1 (Poor)</item>
    <item>2 (Poor)</item>
    <item>3 (Poor)</item>
    <item>4 (Moderate)</item>
    <item>5 (Moderate)</item>
    <item>6 (Moderate)</item>
    <item>7 (Moderate)</item>
    <item>8 (Great)</item>
    <item>9 (Great)</item>
    <item>10 (Great)</item>
  </string-array>
  <string name="activity_back_navigation_button">Return to Activity Page</string>
  <string name="activity_startup_landing">Welcome To Your Recovery</string>
  <string name="activity_startup_create">Create Profile</string>
  <string name= "experience"> We would like to know about your experience </string>
  <string name= "directions_tea"> Express the extent of changes in four areas:  Substance use, Health, Lifestyle, and Community. \n\n For each area, think about how things have become.  Choose from the scale below, the more you have improved, the higher the number. \n\n At the end, write down the one or two changes most important to you in the remarks section.</string>
  <string name = "proceed_to_assessment"> Proceed to Assessment </string>
  <string name = "treatment_experience_assessment">Treatment Experience Assessment</string>
  <string name="volition">Volition</string>
  <string name="readJournalResponse">Reading Response / Journal</string>
  <string name="menubar_home">Home</string>
  <string name="menubar_activity">Activity</string>
  <string name="menubar_plan">Plan</string>
  <string name="plan_note_view_done">Done</string>
  <string name="plan_note_view_no_notes">Nothing.</string>
  <string name="plan_month_progress_textview">Month Progress</string>
  <string name="plan_center_day_textview"> </string>
  <string name="plan_track_button">TRACK</string>
  <string name="plan_notes_edittext">Notes here</string>
  <string-array name="months_array">
    <item>January</item>
    <item>February</item>
    <item>March</item>
    <item>April</item>
    <item>May</item>
    <item>June</item>
    <item>July</item>
    <item>August</item>
    <item>September</item>
    <item>October</item>
    <item>November</item>
    <item>December</item>
    <item>Year to Date</item>
  </string-array>
  <string name = "noActivities">Completed 0% of activities.</string>
  <string name="clinical_overview"> Clinical Overview </string>
  <string-array name="plan_spinner_array">
    <item>Therapy Visit</item>
    <item>Group Visit</item>
    <item>Med Compliance</item>
  </string-array>
</resources>

