...
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.214"/>
  <NumberPicker
    android:id="@+id/tea_number_picker"
    android:layout_width="143dp"
    android:layout_height="135dp"
    android:layout_marginTop="44dp"
    android:layout_marginStart="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
...
      app:layout_constraintHorizontal_bias="0.619"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.844" />

  <Button
      android:id="@+id/submit_button_tea"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginBottom="8dp"
      android:background="@color/res_green"
      android:text="@string/submit"
...
